--- a/css/shared.css
+++ b/css/shared.css
@@ -1,3 +1,5 @@
+/*this file is just for all of
+ the pages that has the same style properties*/
 body {
   background-color: rgb(0, 0, 0);
   color: white;
@@ -10,9 +12,23 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
+  font-family: "Megrim", cursive;
+  font-weight: 900;
 }
+
 
 #contact-info {
   margin-left: auto;
   margin-right: auto;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(248, 248, 249);
+  font-size: 20px;
+  margin: 0 5px;
+}
+
+a:hover {
+  color: rgb(97, 96, 99);
 }
