--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,66 @@
-
 body {
     color: white;
+    /*this is the text color property*/
     background-image: url(/images/space.jpg);
+    /*making the the image as the background for the site.*/
     background-repeat: no-repeat;
+    /*made it to make the background image not repeat itself from the site*/
     width: 100%;
     height: 800px;
+    /*resized the background image*/
     background-size: cover;
+    /*makes the background image cover the whole page*/
     text-align: center;
+    /*makes all the text centered*/
     background-color: rgb(3, 8, 31);
+    /*made site background*/
 }
+
+#top-header >h1 {
+    font-size: 30px;
+    margin: 20.5px auto;
+}
+
+#mid-content {
+    background-color: rgba(171, 170, 170, 0.879);
+    box-shadow: 5px 5px 5px rgb(110, 110, 110);
+    width: 50%;
+    padding: 40px 15px;
+    margin-left: auto;
+    margin-right:auto;
+    margin-top: 15%;
+    border-radius: 10px;
+    font-family: "Megrim", cursive;
+}
+
+h1 {
+    font-weight:bolder;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    font-size: 50px;
+    margin: auto 25px;
+}
+
+h3 {
+    font-family: "Orbitron", sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+  }
+
+#mid-content > a {
+    
+    background-color: blueviolet;
+    box-shadow: 2px 2px rgb(63, 7, 115);
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight:bolder;
+    font-size: larger;
+}
+/*this section when its not being hovered */
+
+#mid-content > a:hover {
+    background-color: rgb(91, 11, 166);
+    box-shadow: 2px 2px rgb(23, 2, 43);
+    color: rgb(255, 255, 255);
+}
+/*this section is for the button when it is being hover*/
